# chatbot-langgraph

./: .gitignore  README.md  chatbot.db  langgraph_backend.py  pyproject.toml  repo_structure.md  requirements.txt  streamlit_frontend.py
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml  quality.yml  security.yml
backend/: __init__.py  main.py
backend/agents/: __init__.py  graph.py  prompts.py  router.py
backend/agents/nodes/: __init__.py  chat_node.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  chat.py  documents.py  health.py  threads.py
backend/core/: __init__.py  config.py  logging.py
backend/db/: __init__.py  session.py
backend/db/repositories/: __init__.py  thread_repository.py
backend/memory/: __init__.py  thread_state.py
backend/models/: __init__.py  chat.py  document.py  thread.py
backend/retrieval/: __init__.py  chunker.py  embedder.py  retriever.py  vector_store.py
backend/services/: __init__.py  chat_service.py  document_service.py  thread_service.py
backend/tools/: __init__.py  calculator.py  rag_tool.py  stock_price.py  web_search.py
backend/utils/: __init__.py  async_runner.py  helpers.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatArea.tsx  HomeClient.tsx  Message.tsx  PdfUploader.tsx  Sidebar.tsx  ToolStatus.tsx
frontend/lib/: api-client.ts  store.ts  types.ts
observability/: __init__.py  logging_config.py
tests/: test_calculator.py  test_helpers.py  test_router.py
